# Code

./: .gitignore  Makefile  README.md
AAA/: audio_gen.c  nodejs.md  read_wav.c  readme.md
AAA/Experience/: readme.md
AAA/Ubuntu/: ubuntuInit.md
AAA/Win/: newInstall.md
AAA/audio/: audio_gen.c
AAA/软件列表/: 软件列表.md
AI/: readme.md
AI/LLM/: readme.md
AI/mcp/: demo.py
AI/ollama/: note.md
AI/openclaw/: note.md
AI/python/: readme.md
Android/: .gitignore  note.md
Android/AOSP/: Android.mk.md
Android/APP/: gradle.md  readme.md
Android/NDK/: readme.md
Android/SKILL/: note.md
Android/USB/: note.md
C 语言/vasprintf 实现和 va_list/: Makefile  main.c
C 语言/通过attribute_section快速测试/: readme.md
C_Cpp/C静态库与动态库/: readme.md
C_Cpp/GCC/: GCC常见选项.md
C_Cpp/Others/: bits.c  常见问题.md
C_Cpp/vasprintf 实现和 va_list/: Makefile
C_Cpp/vasprintf实现和va_list/: Makefile
C_Cpp/通过attribute_section快速测试/: Makefile  main.c  readme.md  test_command.c  test_command.h  test_commandV2.c  test_commandV2.h
Embedded/: README.md  Tips.md
Embedded/ARM/: readme.md
Embedded/Board/RaspberryPi/Pico/myprojects/beep/: CMakeLists.txt  beep.c  main.c  test.c
Embedded/Board/RaspberryPi/Pico/myprojects/program/: CMakeLists.txt  flash_program.c
Embedded/EFI/: readme.md
Embedded/Esp32/: devpro.md
Embedded/FPGA/: note.md
Embedded/GLIB/: readme.md
Embedded/JTAG/: Tips.md  VSCode配置.md
Embedded/OpenOCD/: Tips.md  help.md  readme.md
Embedded/Projects/: README.md
Embedded/Protocol/: i2c.md
Embedded/RTThread/: Tips.md
Engine/Graphics/Learn/01base/: CMakeLists.txt  readme.md
Engine/Graphics/Learn/01base/src/: main.cpp
Engine/Graphics/Learn/01base/src/common/: Matrix3x3.h  Vector2.h  Vector3.h  common.h
Engine/Graphics/Learn/01base/src/draw/: darw.cpp
Engine/UE/: 01base.md  02animation.md  02getstart.md  readme.md  虚幻引擎反射系统.md
Engine/blender/: readme.md
JDLib/: README.md
Lang/: readme.md
Lang/C#/: csproj.md  dotnet.md  readme.md
Lang/Ccala/: readme.md
Lang/Dart/: dart_custom_cli.md  readme.md
Lang/Js/: readme.md
Lang/Lua/: readme.md
Lang/Python/: readme.md
Lang/Rust/: readme.md
Lang/TCL_TK/: readme.md
Lang/vala/: readme.md
Learn/: note.md
Learn/刷题/: README.md
Learn/振动/: note.md
Learn/数据库/: MySQL-必知必会.md
Learn/数据结构与算法/: README.md
Lib/: README.md
Lib/CEF/: readme.md
Lib/Emscripten/: readme.md
Lib/GTK/: readme.md
Lib/Qt/: .gitignore  note.md
Lib/Qt/Cmake/qmltemp/: CMakeLists.txt
Lib/Qt/Cmake/qmltemp/resource/: resource.qrc
Lib/Qt/Cmake/qmltemp/resource/qml/: main.qml  qmldir
Lib/Qt/Cmake/qmltemp/resource/qml/custom/: CButton.qml
Lib/Qt/Cmake/qmltemp/src/: main.cpp
Lib/Qt/Cmake/temp/: CMakeLists.txt
Lib/Qt/Cmake/temp/resource/ui/: mainwindow.ui
Lib/Qt/UI/Qml/temp/: CMakeLists.txt  Makefile
Lib/Qt/UI/Qml/temp/app/: app.pro  content.qrc
Lib/Qt/UI/Qml/temp/app/content/: main.qml
Lib/Qt/UI/Qml/temp/app/content/custom/: MyButton.qml  StatusBar.qml
Lib/Qt/UI/Qml/temp/app/src/: main.cpp
Lib/Qt/UI/Qml/temp/res/qml/: main.qml
Lib/Qt/UI/Qml/temp/resource/: res.qrc
Lib/Qt/UI/Qml/temp/src/: main.cpp
Lib/ncurses/: readme.md
Lib/tinymp3/: Makefile
Linux/: readme.md
Linux/Buildroot/: 01Base.md
Linux/DeviceDriver/: explore.md
Linux/DeviceTree/: .gitignore  readme.md
Linux/Distro/: note.md
Linux/Gdb/: readme.md
Linux/Kernel/: readme.md
Linux/Note/: note.md
Linux/OpenWrt/: dev.md
Linux/Shell/: Shell小细节.md  myshelltools.md
Linux/TinaLinux/: dev.md
Linux/postmarketOS/: readme.md
Linux/udev/: readme.md
OpenLibs/tinymp3的使用/: Makefile
Other/ChatGPT/: readme.md
Other/Cmake/: note.md
Other/Cmake/01base/: CMakeLists.txt  main.c
Other/Cmake/01base/add/: CMakeLists.txt
Other/Cmake/01base/add/include/: add.h
Other/Docker/: readme.md
Other/Eclipse/: dev.md
Other/Git/: git规范.md  readme.md  rebase.md  取前几次提交创建新仓库.md
Other/Gitblit/: readme.md
Other/JustForFun/: readme.md
Other/Kconfig/: Tips.md
Other/MSYS2/: readme.md
Other/Makefile/: Makefile解析.md  template.mk
Other/Matlab/: readme.md
Other/Neovim/: readme.md
Other/VMWare/: readme.md
Other/VSCode/: readme.md
Other/Vim/: readme.md
Other/VisualStudio/: readme.md
Other/VisualStudio/vcpkg/静态链接配置/: CMakeLists.txt  readme.md
Other/VisualStudio/vcpkg/静态链接配置/qml静态链接/: CMakeLists.txt
Other/apt/: note.md  readme.md
Other/clang/: readme.md
Other/mise/: config.toml  mise_env_sync.py  readme.md
Other/myscripts/: Makefile  apply.sh  readme.md
Other/pacman/: readme.md
Other/xm/: readme.md
Other/ysyx/: readme.md
Projects/: README.md
Projects/migo/: .gitignore  Makefile
Projects/xmlParse/: newxml.c  newxml.h  school.xml  student.c
Python/Pygame 实现五子棋/: readme.md
Python/ScanFilesForExtractDataAndStatistics/: demo.py
Python/扫描文件解析内容和统计/: Makefile  demo.py
Python/扫描文件读取内容并统计/: Makefile
Python/正则/: 01example.py  c_header_func.py
QEMU 仿真/QEMU ARM64/: readme.md
QEMU/ARM64/: readme.md
QT/QT 串口通信/: Makefile  MyClass.h  demo.pro  main.cpp
QT/串口通信/: Makefile  MyClass.h
QT/信号与槽/: Counter.h  demo.pro  main.cpp
Qemu/: readme.md
Qemu/ARM64/: readme.md
Qemu/ARMToLearn/: readme.md
Qemu/QEMUALLINONE/: readme.md
Qemu/常用技巧/: note.md
Qt/: note.md
Qt/SignalSlot/: main.cpp
Qt/信号与槽基本概念/: Makefile  demo.pro  main.cpp
Scripts/: blogtemplate.sh  cleanpath.py  cleanpath.sh  generateblog.py  generateblog.sh  scan.sh
Virtual/Qemu/: devprocess.md
WINDOWS/WIN 作为服务器远程操作/: readme.md
WINDOWS/WIN 终端串口程序/: Makefile  readme.md  serial.c
Windows/: dll.sh  readme.md
Windows/ATerminalSerialPortProgram/: Makefile  readme.md
Windows/WIN32API/: readme.md
Windows/WSL2/: readme.md
Windows/Win11/: readme.md
Windows/WindowsAsServerRemoteControl/: readme.md
Windows/Windows作为服务器远程控制/: readme.md
Windows/Windows使用过程的一些问题/: readme.md
Windows/Windows自动查找程序dll依赖/: readme.md
Windows/choco/: readme.md
Windows/cmd启动时设置默认代码页/: readme.md
Windows/dll2lib/: readme.md
刷题/: README.md
小项目/: README.md
操作系统/: README.md
数据结构/: README.md
算法/: README.md  sort.c
算法数据/: README.md
计算机网络/: README.md
(+1212 files in other folders)
